--- a/app/src/main/res/layout/item_join_two.xml
+++ b/app/src/main/res/layout/item_join_two.xml
@@ -21,7 +21,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:padding="20dp">
 
