--- a/app/src/main/res/layout/activity_join_forth.xml
+++ b/app/src/main/res/layout/activity_join_forth.xml
@@ -81,9 +81,9 @@
 
     </RelativeLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -92,7 +92,7 @@
             android:id="@+id/recycle">
 
         </androidx.recyclerview.widget.RecyclerView>
-    </ScrollView>
+<!--    </ScrollView>-->
 
 
 </LinearLayout>
