--- a/app/src/main/res/layout/item_create_fifth.xml
+++ b/app/src/main/res/layout/item_create_fifth.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -18,7 +18,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:padding="20dp">
 
@@ -119,7 +119,17 @@
                 >
 
             </Button>
+            <Button
+                android:id="@+id/b2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="pay offfline"
+                android:layout_below="@+id/b1"
+                android:layout_marginTop="7dp"
+                android:fontFamily="sans-serif-light"
+                >
 
+            </Button>
 
 
         </RelativeLayout>
