--- a/app/src/main/res/layout/activity_create_third.xml
+++ b/app/src/main/res/layout/activity_create_third.xml
@@ -60,6 +60,7 @@
 
     <EditText
         android:id="@+id/price"
+        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="write item price here"
