--- a/app/src/main/res/layout/activity_create_forth.xml
+++ b/app/src/main/res/layout/activity_create_forth.xml
@@ -19,17 +19,16 @@
 
     </TextView>
 
-    <ScrollView
-
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<androidx.recyclerview.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/recycle">
 
 </androidx.recyclerview.widget.RecyclerView>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
