--- a/app/src/main/res/layout/activity_create_second.xml
+++ b/app/src/main/res/layout/activity_create_second.xml
@@ -53,5 +53,13 @@
         android:onClick="done">
 
     </Button>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Re Create"
+        android:textSize="25sp"
+        android:layout_gravity="center"
+        android:onClick="recreate">
 
+    </Button>
 </LinearLayout>
