--- a/app/src/main/res/layout/item_create_fifth.xml
+++ b/app/src/main/res/layout/item_create_fifth.xml
@@ -1,141 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_margin="5dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="1dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:elevation="10dp"
-        android:focusable="true"
-        app:cardCornerRadius="25dp"
-        tools:targetApi="lollipop">
+        android:layout_marginTop="20dp"
+        android:padding="20dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-light"
+            android:text="name"
+            android:textColor="@color/darkBlack"
+            android:textSize="18sp"/>
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-light"
+            android:text="name"
+            android:textColor="@color/darkBlack"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/name"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-light"
+            android:text="email"
+            android:textColor="@color/darkBlack"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/name"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-light"
+            android:text="email"
+            android:textColor="@color/darkBlack"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/email"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-light"
+            android:text="payment"
+            android:textColor="@color/darkBlack"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:id="@+id/payment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/email"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-light"
+            android:text="done/left"
+            android:textColor="@color/darkBlack"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/payment"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-light"
+            android:text="received"
+            android:textColor="@color/darkBlack"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:id="@+id/received"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/payment"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-light"
+            android:text="yes/no"
+            android:textColor="@color/darkBlack"
+            android:textSize="18sp"/>
+
+        <Button
+            android:id="@+id/b1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:padding="20dp">
+            android:layout_below="@+id/received"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-light"
+            android:text="item received"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-light"
-                android:text="name"
-                android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="180dp"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-light"
-                android:text="name"
-                android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/name"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-light"
-                android:text="email"
-                android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/name"
-                android:layout_marginStart="180dp"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-light"
-                android:text="email"
-                android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/email"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-light"
-                android:text="payment"
-                android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/payment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/email"
-                android:layout_marginStart="180dp"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-light"
-                android:text="done/left"
-                android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/payment"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-light"
-                android:text="received"
-                android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/received"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/payment"
-                android:layout_marginStart="180dp"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-light"
-                android:text="yes/no"
-                android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/b1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="item received"
-                android:layout_below="@+id/received"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-light"
-                >
-
-            </Button>
-            <Button
-                android:id="@+id/b2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="pay offfline"
-                android:layout_below="@+id/b1"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-light"
-                >
-
-            </Button>
-
-
-        </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
-
-
-
-</LinearLayout>
+        <Button
+            android:id="@+id/b2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/b1"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-light"
+            android:text="pay offfline"/>
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
