--- a/app/src/main/res/layout/activity_join_third.xml
+++ b/app/src/main/res/layout/activity_join_third.xml
@@ -61,6 +61,7 @@
     </TextView>
 
     <Button
+        android:id="@+id/done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
