--- a/app/src/main/res/layout/activity_join_second.xml
+++ b/app/src/main/res/layout/activity_join_second.xml
@@ -1,89 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Join_second">
 
-    <RelativeLayout
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:padding="20dp">
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:fontFamily="sans-serif-light"
-        android:text="Class code"
-        android:textColor="@color/darkBlack"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/classcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="7dp"
-        android:fontFamily="sans-serif-light"
-        android:text="classcode"
-        android:textColor="@color/darkBlack"
-        android:textSize="18sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/classcode"
-            android:layout_marginTop="7dp"
-            android:fontFamily="sans-serif-light"
-            android:text="College name"
-            android:textColor="@color/darkBlack"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/collegename"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/classcode"
-            android:layout_marginStart="110dp"
-            android:layout_marginTop="7dp"
-            android:fontFamily="sans-serif-light"
-            android:text="College name"
-            android:textColor="@color/darkBlack"
-            android:textSize="18sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/classcode"
-            android:layout_marginTop="47dp"
-            android:fontFamily="sans-serif-light"
-            android:text="All item"
-            android:textColor="@color/darkBlack"
-            android:textSize="18sp" />
-
-
-
-
-
-    </RelativeLayout>
+        android:layout_height="220dp"
+        android:background="@drawable/ic_launcher_background"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-
-        <androidx.recyclerview.widget.RecyclerView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/recycle">
+            android:paddingHorizontal="@dimen/_5sdp"
+            android:paddingTop="@dimen/_50sdp">
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <TextView
+                android:id="@+id/classCodeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:fontFamily="sans-serif-light"
+                android:text="Class code"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/classcode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_toEndOf="@+id/collegeNameText"
+                android:fontFamily="sans-serif-light"
+                android:text="class code"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/collegeNameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/classcode"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="sans-serif-light"
+                android:text="College name"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/collegename"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/collegeNameText"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_toEndOf="@+id/collegeNameText"
+                android:fontFamily="sans-serif-light"
+                android:text="College name"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/collegename"
+                android:layout_marginTop="20dp"
+                tools:itemCount="5"
+                tools:listitem="@layout/item_join_two"/>
+        </RelativeLayout>
     </ScrollView>
-
-
-</LinearLayout>
+</RelativeLayout>
