--- a/app/src/main/res/layout/item_join_two.xml
+++ b/app/src/main/res/layout/item_join_two.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cv"
         android:layout_width="match_parent"
@@ -13,16 +12,13 @@
         android:clickable="true"
         android:elevation="10dp"
         android:focusable="true"
+        android:layout_margin="@dimen/_2sdp"
         app:cardCornerRadius="25dp"
         tools:targetApi="lollipop">
-
-
-
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:padding="20dp">
 
             <TextView
@@ -32,7 +28,7 @@
                 android:fontFamily="sans-serif-light"
                 android:text="item name"
                 android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
+                android:textSize="18sp"/>
 
             <TextView
                 android:id="@+id/name"
@@ -43,7 +39,7 @@
                 android:fontFamily="sans-serif-light"
                 android:text="item name"
                 android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
+                android:textSize="18sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -53,7 +49,7 @@
                 android:fontFamily="sans-serif-light"
                 android:text="price"
                 android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
+                android:textSize="18sp"/>
 
             <TextView
                 android:id="@+id/price"
@@ -65,7 +61,7 @@
                 android:fontFamily="sans-serif-light"
                 android:text="price"
                 android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
+                android:textSize="18sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -75,7 +71,7 @@
                 android:fontFamily="sans-serif-light"
                 android:text="deadline"
                 android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
+                android:textSize="18sp"/>
 
             <TextView
                 android:id="@+id/deadline"
@@ -87,14 +83,7 @@
                 android:fontFamily="sans-serif-light"
                 android:text="deadline"
                 android:textColor="@color/darkBlack"
-                android:textSize="18sp" />
-
-
-
-
+                android:textSize="18sp"/>
         </RelativeLayout>
-
     </androidx.cardview.widget.CardView>
-
-
 </LinearLayout>
